chore: WRS update and doc cleanup